--- a/12_2筆記.md
+++ b/12_2筆記.md
@@ -1,5 +1,5 @@
 12_2筆記：
--- anaconda --
+### anaconda
 conda create --name xxx(e.g.kevin) python=xx，
 這個創建的虛擬環境跟原本環境最大的差別是"環境變數"不一樣
 每個虛擬環境會被存在實體環境的./anaconda/envs底下，也就是./anaconda/envs/kevin
@@ -7,22 +7,24 @@ conda env list 及 conda activate xxx 可以切換虛擬環境
 在每一個虛擬環境pip install會載到./anaconda/envs/xxx/lib/python3.6/site-packages，也因此不同的虛擬環境所載的套件才能分割
 * 上述的路徑windows跟linux會略有不同
 
--- ssh display graph --
+### ssh display graph --
 在linux文字化的介面，圖片是透過X-server來顯示，指令用display "img_name"
 另外windows ssh過去linux無法直接用它的X-server來開圖片呈現在windows上，因此ssh必需要附加X11 forwarding才能
 在putty的介面：Connection->SSH->X11，勾選Enable X11 forwarding，X display location: 127.0.0.1:0，而遠端主機的/etc/ssh/sshd_config設定X11Forwarding yes
 
--- remote tool --
+### remote tool
 好用的工具：MobaXterm
 
--- 安裝 anaconda (on linux) --
-1. wget https://repo.anaconda.com/archive/Anaconda3-2019.10-Linux-x86_64.sh
-2. bash Anaconda3-2019.10-Linux-x86_64.sh
-3. 全部都YES或按ENTER
-4. . ~/anaconda3/bin/activate
-5. conda init zsh
+### 安裝 anaconda (on linux)
+```
+wget https://repo.anaconda.com/archive/Anaconda3-2019.10-Linux-x86_64.sh
+bash Anaconda3-2019.10-Linux-x86_64.sh
+全部都YES或按ENTER
+. ~/anaconda3/bin/activate
+conda init zsh
+```
 
--- bash vs source --
+### bash vs source
 source ~/test = . ~/test；source就是.
 source跟bash最大的差別在於source是用"現有的shell"去做事情，也就是"會改變"現有的環境
 而bash是開"新的shell"去做事情，並將事情的結果回傳給現有的環境，也就是"不會改變"現有的環境
