--- a/12_2筆記.md
+++ b/12_2筆記.md
@@ -1,5 +1,4 @@
-12_2筆記：
-### anaconda
+## anaconda
 conda create --name xxx(e.g.kevin) python=xx，
 這個創建的虛擬環境跟原本環境最大的差別是"環境變數"不一樣
 每個虛擬環境會被存在實體環境的./anaconda/envs底下，也就是./anaconda/envs/kevin
