--- a/12_2筆記.md
+++ b/12_2筆記.md
@@ -1,18 +1,25 @@
 ## anaconda
-conda create --name xxx(e.g.kevin) python=xx，
-這個創建的虛擬環境跟原本環境最大的差別是"環境變數"不一樣
-每個虛擬環境會被存在實體環境的./anaconda/envs底下，也就是./anaconda/envs/kevin
+```
+conda create --name xxx(e.g.kevin) python=xx(e.g. python=3.6)
+```
+這個創建的虛擬環境跟原本環境最大的差別是"環境變數"不一樣  
+每個虛擬環境會被存在實體環境的./anaconda/envs底下，也就是./anaconda/envs/kevin  
+```
 conda env list 及 conda activate xxx 可以切換虛擬環境
+```
 在每一個虛擬環境pip install會載到./anaconda/envs/xxx/lib/python3.6/site-packages，也因此不同的虛擬環境所載的套件才能分割
 * 上述的路徑windows跟linux會略有不同
 
 ## ssh display graph --
-在linux文字化的介面，圖片是透過X-server來顯示，指令用display "img_name"
-另外windows ssh過去linux無法直接用它的X-server來開圖片呈現在windows上，因此ssh必需要附加X11 forwarding才能
-在putty的介面：Connection->SSH->X11，勾選Enable X11 forwarding，X display location: 127.0.0.1:0，而遠端主機的/etc/ssh/sshd_config設定X11Forwarding yes
+在linux文字化的介面，圖片是透過X-server來顯示，指令用display "img_name"  
+* display指令由imagemagick提供 
+另外windows ssh過去linux無法直接用它的X-server來開圖片呈現在windows上，因此ssh必需要附加X11 forwarding才能  
+在putty的介面：Connection->SSH->X11，勾選Enable X11 forwarding，X display location: 127.0.0.1:0，而遠端主機的/etc/ssh/sshd_config設定X11Forwarding yes  
+* 就算這樣設定也不一定成功，若要看圖片建議用MobaXterm(使用display)或jupyter notebook
 
 ## remote tool
 好用的工具：MobaXterm
+* 若要開jupyter有機率當機，建議改用putty
 
 ## 安裝 anaconda (on linux)
 ```
@@ -24,8 +31,8 @@ conda init zsh
 ```
 
 ## bash vs source
-source ~/test = . ~/test；source就是.
-source跟bash最大的差別在於source是用"現有的shell"去做事情，也就是"會改變"現有的環境
-而bash是開"新的shell"去做事情，並將事情的結果回傳給現有的環境，也就是"不會改變"現有的環境
+source ~/test = . ~/test；source就是.  
+source跟bash最大的差別在於source是用"現有的shell"去做事情，也就是"會改變"現有的環境  
+而bash是開"新的shell"去做事情，並將事情的結果回傳給現有的環境，也就是"不會改變"現有的環境  
 這也是為什麼安裝anaconda的第4點要用source
 
