--- a/12_2筆記.md
+++ b/12_2筆記.md
@@ -8,14 +8,14 @@ conda create --name xxx(e.g.kevin) python=xx(e.g. python=3.6)
 conda env list 及 conda activate xxx 可以切換虛擬環境
 ```
 在每一個虛擬環境pip install會載到./anaconda/envs/xxx/lib/python3.6/site-packages，也因此不同的虛擬環境所載的套件才能分割
-* 上述的路徑windows跟linux會略有不同
+* 上述的路徑windows跟linux會略有不同 *
 
 ## ssh display graph --
 在linux文字化的介面，圖片是透過X-server來顯示，指令用display "img_name"  
-* display指令由imagemagick提供 
+* display指令由imagemagick提供 *
 另外windows ssh過去linux無法直接用它的X-server來開圖片呈現在windows上，因此ssh必需要附加X11 forwarding才能  
 在putty的介面：Connection->SSH->X11，勾選Enable X11 forwarding，X display location: 127.0.0.1:0，而遠端主機的/etc/ssh/sshd_config設定X11Forwarding yes  
-* 就算這樣設定也不一定成功，若要看圖片建議用MobaXterm(使用display)或jupyter notebook
+* 就算這樣設定也不一定成功，若要看圖片建議用MobaXterm(使用display)或jupyter notebook *
 
 ## remote tool
 好用的工具：MobaXterm
