--- a/12_3筆記.md
+++ b/12_3筆記.md
@@ -1,30 +1,51 @@
-12_3筆記：
--- pth --
-Python 的模組搜尋路徑，可以自己定義sys.path，.pth檔名是什麼無所謂，Python只認副檔名。.pth檔案中每行指定一個路徑(最好是絕對路徑)
-把.pth檔放在python的套件底下的site-package，e.g.：python3.6/site-packages
-建議開發python都用conda創虛擬環境來做，好管理
-conda指令可以下載anaconda或mambaforge
+## pth 
+Python 的模組搜尋路徑，可以自己定義sys.path，.pth檔名是什麼無所謂，Python只認副檔名。.pth檔案中每行指定一個路徑(最好是絕對路徑)  
+把.pth檔放在python的套件底下的site-package，e.g.：python3.6/site-packages  
 
+```
+echo $PWD > ~/mambaforge/envs/xxx/lib/python3.6/site-packages
+```
 
--- ssh display graph --
-在linux文字化的介面，圖片是透過X-server來顯示，指令用display "img_name"
-另外windows ssh過去linux無法直接用它的X-server來開圖片呈現在windows上，因此ssh必需要附加X11 forwarding才能
-在putty的介面：Connection->SSH->X11，勾選Enable X11 forwarding，X display location: 127.0.0.1:0，而遠端主機的/etc/ssh/sshd_config設定X11Forwarding yes
+建議開發python都用conda創虛擬環境來做，好管理且所有檔案都集中在一個資料夾(/anaconda3；/mambaforge)  
+conda指令由anaconda或mambaforge提供  
 
--- remote tool --
-好用的工具：MobaXterm
-切記如果putty要開X11 forwarding的話，必須要清空MobaXterm的user session
+* 建議用mambaforge，執行jupyer notebook比較不會有問題
 
--- 安裝 anaconda (on linux) --
-1. wget https://repo.anaconda.com/archive/Anaconda3-2019.10-Linux-x86_64.sh
-2. bash Anaconda3-2019.10-Linux-x86_64.sh
-3. 全部都YES或按ENTER
-4. . ~/anaconda3/bin/activate
-5. conda init zsh
+## pytorch
+pytorch 0.9無法支援RTX2000的GPU，會出現cublas runtime error，更新pytorch即可解決
 
--- bash vs source --
-source ~/test = . ~/test；source就是.
-source跟bash最大的差別在於source是用"現有的shell"去做事情，也就是"會改變"現有的環境
-而bash是開"新的shell"去做事情，並將事情的結果回傳給現有的環境，也就是"不會改變"現有的環境
-這也是為什麼安裝anaconda的第4點要用source
+```
+conda list 查虛擬環境下載哪些套件
+pip install --upgrade torch
+```
 
+## Jupyter notebook
+
+先下載 mambaforge
+
+```
+curl -L -O https://github.com/conda-forge/miniforge/releases/latest/download/Mambaforge-$(uname)-$(uname -m).sh
+bash Mambaforge-$(uname)-$(uname -m).sh
+. ~/mambaforge/bin/activate
+```
+
+再下載 jupyer notebook
+
+```
+conda create --name jupyter python=3.6 創一個虛擬環境來測試
+conda activate jupyter
+mamba install -c conda-forge jupyterlab
+firewall-cmd --add-port 8888/tcp --permanent 開通jupyter default port
+firewall-cmd --reload
+jupyter notebook --ip=x.x.x.x 遠端虛擬機ip，若本機有存虛擬機的hostname，則輸入0.0.0.0
+```
+
+## uninstall anaconda
+
+```
+rm -r /anaconda3
+vi ~/.bashrc 
+刪掉# >>> conda initialize >>>區域
+```
+
+如果不是root，就不能執行dnf install，`就不會下載奇怪的東西到其他地方，所有東西都只會在家目錄`
