--- a/12_3筆記.md
+++ b/12_3筆記.md
@@ -48,4 +48,4 @@ vi ~/.bashrc
 刪掉# >>> conda initialize >>>區域
 ```
 
-如果不是root，就不能執行dnf install，`就不會下載奇怪的東西到其他地方，所有東西都只會在家目錄`
+如果不是root，就不能執行dnf install，**就不會下載奇怪的東西到其他地方，所有東西都只會在家目錄**
